# server/internal/modules/instance/adapter/http/gen/server.gen.go
@@ -210,7 +210,15 @@ func HandlerWithOptions(si ServerInterface, options StdHTTPServerOptions) http.H
 	return m
 }
 
-type ProblemApplicationProblemPlusJSONResponse externalRef0.Problem
+type ProblemResponseHeaders struct {
+	RetryAfter      *int
+	WWWAuthenticate *string
+}
+type ProblemApplicationProblemPlusJSONResponse struct {
+	Body externalRef0.Problem
+
+	Headers ProblemResponseHeaders
+}
 
 type GetInstanceRequestObject struct {
 }
@@ -235,6 +243,7 @@ func (response GetInstance200JSONResponse) VisitGetInstanceResponse(w http.Respo
 
 type GetInstancedefaultApplicationProblemPlusJSONResponse struct {
 	Body       externalRef0.Problem
+	Headers    ProblemResponseHeaders
 	StatusCode int
 }
 
@@ -245,6 +254,12 @@ func (response GetInstancedefaultApplicationProblemPlusJSONResponse) VisitGetIns
 		return err
 	}
 	w.Header().Set("Content-Type", "application/problem+json")
+	if response.Headers.RetryAfter != nil {
+		w.Header().Set("Retry-After", fmt.Sprint(*response.Headers.RetryAfter))
+	}
+	if response.Headers.WWWAuthenticate != nil {
+		w.Header().Set("WWW-Authenticate", fmt.Sprint(*response.Headers.WWWAuthenticate))
+	}
 	w.WriteHeader(response.StatusCode)
 	_, err := buf.WriteTo(w)
 	return err
